# syne-tune

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  dev_setup.sh  license-add.sh  license-remove.sh  pyproject.toml  pytest.ini  release.sh  requirements-aws.txt  requirements-blackbox-repository.txt  requirements-bore.txt  requirements-botorch.txt  requirements-dev.txt  requirements-extra.txt  requirements-gpsearchers.txt  requirements-moo.txt  requirements-noaws.txt  requirements-ray.txt  requirements-sklearn.txt  requirements-smac.txt  requirements.txt  setup.cfg  setup.py
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: .codecov.yml  CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-code-examples.yml  check-standalone-bayesian-optimization.yml  end-to-end-tests.yml  fast-tests.yml  from-github-docs.yml  install-syne-tune.yml  integ-tests.yml  lint.yml  pr-title.yml  python-app.yml  python-build.yml  python-publish.yml  release-drafter.yml  (+9 more)
benchmark_kdd/: baselines.py  benchmark_surrogates.py  show_results.py
benchmarking/: README.md  baselines.py  benchmark_main.py  benchmarks.py  launch_slurmpilot.py  requirements.txt
benchmarks/: benchmark_factory.py  checkpoint.py  estimator_factory.py  launch_benchmarks.py  launch_hpo.py  launch_sample_searcher_states.py  launch_utils.py  scheduler_factory.py  searcher_state_callback.py  show_experiment_results.py  utils.py
blackbox_repository/: README.md  __init__.py  blackbox.py  blackbox_offline.py  blackbox_surrogate.py  blackbox_tabular.py  repository.py  requirements.txt  serialize.py  tabulated_benchmark.py  utils.py
container/: Dockerfile  README.md  build_sagemaker_tune_container.sh  build_syne_tune_container.sh  custom-container-requirements.txt
docs/: benchmarks.md  command_line.md  faq.md  schedulers.md  search_space.md
examples/: check_cqr.py  example_automatic_termination_criterion.py  launch_asha_yahpo.py  launch_ask_tell_scheduler.py  launch_ask_tell_scheduler_hyperband.py  launch_ask_tell_schedululer_hyperband.py  launch_bayesopt_constrained.py  launch_checkpoint_example.py  launch_contributed_surrogate_bo.py  launch_cqr_nasbench201.py  launch_custom_benchmark.py  launch_custom_benchmark_remotely.py  launch_fashionmnist.py  launch_fashionmnist_checkpoint_removal.py  launch_fashionmnist_costaware.py  launch_height_baselines.py  launch_height_benchmark_local.py  launch_height_benchmark_remotely.py  launch_height_benchmark_sagemaker.py  launch_height_bore.py  launch_height_config_json.py  launch_height_extra_results.py  launch_height_final_results.py  launch_height_hyperband_sync.py  launch_height_local.py  launch_height_local_backend.py  launch_height_local_pasha.py  launch_height_moasha.py  launch_height_mobster.py  launch_height_pasha.py  launch_height_python_backend.py  launch_height_ray.py  launch_height_sagemaker.py  launch_height_sagemaker_checkpoints.py  launch_height_sagemaker_custom_image.py  launch_height_sagemaker_remote_launcher.py  launch_height_sagemaker_remotely.py  launch_height_simple.py  launch_height_standalone_scheduler.py  launch_hpob.py  (+24 more)
githooks/: pre-commit
hf_blog_post/: example_syne_tune_for_hf.ipynb  requirements.txt  run_glue.py
sagemaker_tune/: __init__.py  constants.py  experiments.py  num_gpu.py  report.py  search_space.py  stopping_criterion.py  tuner.py  tuner_callback.py  tuning_status.py  util.py
speedrun/: launch_tuning.py  train_gpt.py
syne_tune/: __init__.py  config_space.py  constants.py  experiments.py  num_gpu.py  read_version.py  report.py  results_callback.py  search_space.py  stopping_criterion.py  try_import.py  tuner.py  tuner_callback.py  tuner_logger.py  tuning_status.py  util.py  version.py
tst/: test_automatic_termination_criterion.py  test_benchmark.py  test_bore.py  test_config_space.py  test_constrained_bo.py  test_convert_domain.py  test_cost_aware_bo.py  test_estimators.py  test_experiment_path.py  test_grid_search.py  test_instance_info.py  test_isinstance.py  test_legacy_points_to_evaluate.py  test_legacy_pointstoevaluate.py  test_median_stopping_rule.py  test_moasha.py  test_pbt.py  test_plateau_stopper.py  test_points_to_evaluate.py  test_pointstoevaluate.py  test_random_seed.py  test_report.py  test_schedulers.py  test_searchspace.py  test_status.py  test_synthetic.py  test_tuner.py  test_tuner_logger.py  util_test.py
(+1254 files in other folders)
