[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syne-tune"
dynamic = ["version"]
description = "A Hyperparameter Optimization Library"
readme = "README.md"
authors = [{name = "Syne Tune Developers"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22.0, <1.27.0",
    "dill>=0.3.6",
    "pandas",
    "typing_extensions",
    "sortedcontainers",
]

[project.optional-dependencies]
gpsearchers = [
    "scipy<1.15.3",
    "autograd>=1.3",
]
kde = [
    "statsmodels",
]
dev = [
    "pytest",
    "pytest-cov~=4.1.0",
    "pytest-timeout",
    "black==22.3.0",
    "flake8",
    "sphinx<8.0.0",
    "nbsphinx",
    "ipykernel",
    "pypandoc_binary",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "traitlets<=5.11.2",
    "myst-parser",
    "sphinx_copybutton",
    "sphinxcontrib-bibtex",
    "sphinxcontrib.jquery",
    "wheel",
]
moo = [
    "pymoo==0.6.0",
    "scipy>=1.3.3",
]
visual = [
    "matplotlib",
]
sklearn = [
    "scikit-learn<1.6",
]
"blackbox-repository" = [
    "numpy>=1.16.0, <1.27.0",
    "pandas",
    "scikit-learn",
    "xgboost",
    "fastparquet",
    "h5py",
    "huggingface_hub",
]
yahpo = [
    "onnxruntime>=1.10.0",
    "pyyaml",
    "configspace<=0.6.1",
    "pandas",
    "yahpo-gym",
]
raytune = [
    "ray[tune]>=2.0.0",
    "scikit-learn",
    "scikit-optimize",
]
botorch = [
    "botorch>=0.7.2",
]
bore = [
    "xgboost",
    "scikit-learn",
]
smac = [
    "swig",
    "smac>=2.0",
]
extra = [
    "syne-tune[gpsearchers]",
    "syne-tune[kde]",
    "syne-tune[dev]",
    "syne-tune[moo]",
    "syne-tune[visual]",
    "syne-tune[sklearn]",
    "syne-tune[blackbox-repository]",
    "syne-tune[yahpo]",
    "syne-tune[raytune]",
    "syne-tune[botorch]",
    "syne-tune[bore]",
]

[project.urls]
"Homepage" = "https://github.com/awslabs/syne-tune"
"Bug Tracker" = "https://github.com/awslabs/syne-tune/issues"

[tool.setuptools.packages.find]
include = ["syne_tune", "syne_tune.*"]
exclude = []

[tool.setuptools.dynamic]
version = {attr = "syne_tune.read_version"}
